# multilingual-examples

./: .gitignore  2ts.ts  deno.json  go.mod  go2ts.ts  index.html  package.json  py2ts.ts  pyproject.toml  pyrefly.toml  ruff.toml  tsconfig.json  tygo.yaml  vite.config.ts
.github/: copilot-instructions-go.md  copilot-instructions-python.md  copilot-instructions.md
go/: .golangci.yml  go.mod  main.go
go/models/: Author.go  User.go  index.ts
python/: __init__.py  main.py  models.py  models.ts
python/models/: Author.py  Post.py  Post.ts  User.py  User.ts
ts/: lib.ts  main.tsx
web/: App.tsx  global.css  main.tsx
